--- a/composer.json
+++ b/composer.json
@@ -58,16 +58,10 @@
   },
   "scripts": {
     "post-install-cmd": [
-      "php artisan clear-compiled",
-      "php artisan stylist:publish",
-      "php artisan module:publish",
-      "php artisan optimize"
+      "php artisan clear-compiled"
     ],
     "post-update-cmd": [
-      "php artisan clear-compiled",
-      "php artisan stylist:publish",
-      "php artisan module:publish",
-      "php artisan optimize"
+      "php artisan clear-compiled"
     ],
     "post-create-project-cmd": [
       "php artisan cache:clear"
